# dj-tg-template

./: README.md  bot.py  cookiecutter.json  pyproject.toml
accounts/: admin.py  router.py  views.py
{{cookiecutter.project_name}}/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  conftest.py  docker-compose.yml  manage.py  pyproject.toml  supervisord.conf
{{cookiecutter.project_name}}/accounts/: admin.py  models.py  router.py
{{cookiecutter.project_name}}/core/: cache.py  logger.py
{{cookiecutter.project_name}}/core/management/commands/: run_bot.py  runbot.py
{{cookiecutter.project_name}}/tg_bot/: asgi.py  settings.py  urls.py  wsgi.py
