[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = [
  { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.email }}" }
]
requires-python = ">= 3.12"
dependencies = [
    "django>=5.2",
    "pillow>=11.2.1",
    "python-telegram-bot>=22.0",
]
readme = "README.md"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "python-dotenv>=1.1.0",
]

[tool.ruff]
line-length = 120
extend-exclude = ["**/migrations/*.py", "**/*.js", "**/*.css", "templates/"]

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "DJ",  # flake8-django
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tg_bot.settings"
python_files = ["tests.py", "test_*.py"]

